<resources>
    <string name="app_name">RadiON</string>
    <string name="boxEmail">E-mail</string>
    <string name="textoEmail">Email</string>
    <string name="boxSenha">Senha</string>
    <string name="textoSenha">Senha</string>
    <string name="textoCadastrar">Novo por aqui? Cadastre-se!</string>
    <string name="textoEsqueciSenha">Esqueceu a senha?</string>
    <string name="descricaoImagem">Logotipo do app</string>
    <string name="btnLogin">Login</string>
    <string name="menu_settings">Perfil</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mudarSenha">Alterar senha</string>
    <string name="menu_mudarFotoPerfil">Alterar foto </string>
    <string name="menu_mudarApelido">Alterar Apelido</string>
    <string name="menu_infoUsuario">Apelido</string>
    <string name="menu_historico">Histórico</string>

    <string name="menu_playlist">Playlist</string>
    <string name="menu_encerrar">Excluir conta</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_bloqueado">Pessoas bloqueadas</string>

    <string name="home_second">Home Second</string>
    <string name="estado">  UF  </string>
    <string name="exemploTelefone">(00) 0 0000 0000</string>
    <string name="telefone">Telefone</string>
    <string name="exemplo_email">developer@teste</string>
    <string name="email">Email</string>
    <string name="teste">developer</string>
    <string name="cpf">CPF</string>
    <string name="apelido">Apelido</string>
    <string name="sair">Sair</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="ddd_telefone">DDD + Telefone</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ddd">DDD</string>
    <string name="nomecompleto">Nome completo</string>

    <string name="version">1.0</string>
    <string name="nome_da_m_sica">Nome da música</string>
    <string name="cantor_a_banda">Cantor(a)/Banda: </string>
    <string name="album">Album: </string>
    <string name="novo_apelido">Novo apelido</string>
    <string name="mudar_apelido">Editar apelido</string>
    <string name="editar_estado">Editar estado</string>
    <string name="pesquisa_por_m_sica">Pesquisa por música</string>

</resources>
