<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degrade_login">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/lodotipoLogin"
                    android:layout_width="108dp"
                    android:layout_height="238dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/descricaoImagem"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/textoEmailCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/textoEmail"
                    android:textColor="@color/boxTextLogin" />

                <EditText
                    android:id="@+id/boxEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/boxEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textos"
                    android:textColorLink="@color/boxTextLogin" />

                <TextView
                    android:id="@+id/textoSenhaLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/textoSenha"
                    android:textColor="@color/boxTextLogin" />

                <EditText
                    android:id="@+id/boxSenhaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/boxSenha"
                    android:inputType="textPassword"
                    android:textColor="@color/boxTextLogin"
                    android:textColorLink="@color/boxTextLogin" />

                <TextView
                    android:id="@+id/textoEsqueciSenhaLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:autoLink="all|web|phone|none|map|email"
                    android:clickable="true"
                    android:text="@string/textoEsqueciSenha"
                    android:textColor="@color/boxTextLogin"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textoCadastroLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:autoLink="all|web|phone|none|map|email"
                    android:clickable="true"
                    android:text="@string/textoCadastrar"
                    android:textColor="@color/boxTextLogin"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnLogarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="#FF5F17D3"
                    android:text="@string/btnLogin"
                    android:textColor="@color/boxTextLogin" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>